--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: github_pages_template
+title: dart_dungeon
 email: wpafbo79@yahoo.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Template for my GitHub Pages configuration.
-baseurl: "/github_pages_template" # the subpath of your site, e.g. /blog
+  A random dungeon layout generator using Dart.
+baseurl: "/dart_dungeon" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  wpafbo79
