--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 # Files and directories created by pub
 .dart_tool/
 .packages
+
+# Conventional directory for build outputs
 build/
-# If you're building an application, you may want to check-in your pubspec.lock
-pubspec.lock
 
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
